grammar.js
    source_file: ($) => optional($._block),

    block: ($) => $._block,

    _block: ($) =>
      choice(
        seq(
          repeat1(seq($._statement, optional(";"))),
          optional(seq($._last_statement, optional(";"))),
        ),
        seq($._last_statement, optional(";")),
      ),

    local_declaration: ($) =>
      seq(
        optional("export"),
        "local",
        field("bindings", $.binding_list),
        optional(seq("=", field("values", $.expression_list))),
      ),

    binding_list: ($) => commaSep1($.binding),

    binding: ($) => seq(field("name", $._identifier), optional(seq(":", field("type", $._type)))),

    assignment_statement: ($) =>
      seq(field("left", $.assignment_target_list), "=", field("right", $.expression_list)),

    assignment_target_list: ($) => commaSep1($._assignment_target),

    _assignment_target: ($) => choice($._identifier, $.field_expression, $.index_expression),

    compound_assignment_statement: ($) =>
      seq(
        field("left", $._assignment_target),
        field("operator", choice("+=", "-=", "*=", "/=", "//=", "%=", "^=", "..=")),
        field("right", $._expression),
      ),

    expression_statement: ($) => choice($.call_expression, $.method_call_expression),

    function_declaration: ($) =>
      seq(
        optional(field("attributes", $.attributes)),
        optional("export"),
        "function",
        field("name", $.function_name),
        $.function_body,
      ),

    local_function_declaration: ($) =>
      seq(
        optional(field("attributes", $.attributes)),
        "local",
        "function",
        field("name", $._identifier),
        $.function_body,
      ),

    function_name: ($) =>
      seq(
        field("name", $._identifier),
        repeat(seq(".", field("field", $._identifier))),
        optional(seq(":", field("method", $._identifier))),
      ),

    function_body: ($) =>
      seq(
        optional(field("generics", $.generic_parameter_list)),
        field("parameters", $.parameter_list),
        optional(seq(":", field("return_type", $._return_type))),
        optional(field("body", $.block)),
        "end",
      ),

    parameter_list: ($) =>
      seq(
        "(",
        optional(
          choice(
            commaSep1($.parameter),
            seq(commaSep1($.parameter), ",", $.variadic_parameter),
            $.variadic_parameter,
          ),
        ),
        ")",
      ),

    parameter: ($) => seq(field("name", $._identifier), optional(seq(":", field("type", $._type)))),

    do_statement: ($) => seq("do", optional(field("body", $.block)), "end"),

    repeat_statement: ($) =>
      seq("repeat", optional(field("body", $.block)), "until", field("condition", $._expression)),

    if_statement: ($) =>
      seq(
        "if",
        choice(
          seq(field("condition", $._expression), "then", optional(field("consequence", $.block))),
          $.if_local_clause,
        ),
        repeat(field("alternative", $.elseif_clause)),
        optional(field("alternative", $.else_clause)),
        "end",
      ),

    elseif_clause: ($) =>
      seq(
        "elseif",
        choice(
          seq(field("condition", $._expression), "then", optional(field("consequence", $.block))),
          $.if_local_clause,
        ),
      ),

    else_clause: ($) => seq("else", optional(field("body", $.block))),

    numeric_for_statement: ($) =>
      seq(
        "for",
        field("binding", $.binding),
        "=",
        field("start", $._expression),
        ",",
        field("end", $._expression),
        optional(seq(",", field("step", $._expression))),
        "do",
        optional(field("body", $.block)),
        "end",
      ),

    generic_for_statement: ($) =>
      seq(
        "for",
        field("bindings", $.binding_list),
        "in",
        field("values", $.expression_list),
        "do",
        optional(field("body", $.block)),
        "end",
      ),

    return_statement: ($) =>
      prec.right(seq("return", optional(field("values", $.expression_list)))),

    break_statement: () => "break",

    continue_statement: () => "continue",

    expression_list: ($) => prec.right(commaSep1($._expression)),

    _expression: ($) =>
      choice($._simple_expression, $.unary_expression, $.binary_expression, $.type_cast_expression),

    binary_expression: ($) =>
      choice(
        ...BINARY_OPERATORS.map(([operator, precedence, associativity]) => {
          const rule = seq(
            field("left", $._expression),
            field("operator", operator),
            field("right", $._expression),
          );

          return associativity === "right"
            ? prec.right(precedence, rule)
            : prec.left(precedence, rule);
        }),
      ),

    field_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(field("table", $._prefix_expression), ".", field("field", $._identifier)),
      ),

    call_expression: ($) =>
      prec.left(
        PREC.POSTFIX,
        seq(field("function", $._prefix_expression), field("arguments", $.arguments)),
      ),

    _prefix_expression: ($) =>
      choice(
        $._identifier,
        $.parenthesized_expression,
        $.field_expression,
        $.index_expression,
        $.call_expression,
        $.method_call_expression,
        $.type_instantiation_expression,
      ),

    arguments: ($) =>
      choice(
        seq("(", optional($.expression_list), ")"),
        $.table_constructor,
        alias($._string_literal, $.string),
      ),

    number: () =>
      token(
        choice(
          /0[xX][0-9a-fA-F_]+/,
          /0[bB][01_]+/,
          /(?:[0-9][0-9_]*(?:\.[0-9_]*)?|\.[0-9][0-9_]*)(?:[eE][+-]?[0-9_]+)?/,
        ),
      ),

    _string_literal: ($) => choice($.quoted_string, $.long_string),

    quoted_string: ($) =>
      choice(
        seq(
          '"',
          repeat(choice(alias($._double_string_content, $.string_content), $.escape_sequence)),
          token.immediate('"'),
        ),
        seq(
          "'",
          repeat(choice(alias($._single_string_content, $.string_content), $.escape_sequence)),
          token.immediate("'"),
        ),
      ),

    _double_string_content: () => token.immediate(prec(1, /[^"\\\r\n]+/)),

    _single_string_content: () => token.immediate(prec(1, /[^'\\\r\n]+/)),

    type_alias_declaration: ($) =>
      seq(
        optional("export"),
        "type",
        field("name", $._identifier),
        optional(field("generics", $.generic_definition_list)),
        "=",
        field("value", $._type),
      ),

    type_function_declaration: ($) =>
      seq(optional("export"), "type", "function", field("name", $._identifier), $.function_body),

    generic_definition_list: ($) => {
      const requiredType = alias($._required_generic_type_definition, $.generic_type_definition);
      const defaultType = alias($._default_generic_type_definition, $.generic_type_definition);

      const requiredPack = alias(
        $._required_generic_type_pack_definition,
        $.generic_type_pack_definition,
      );

      const defaultPack = alias(
        $._default_generic_type_pack_definition,
        $.generic_type_pack_definition,
      );

      return seq(
        "<",
        choice(
          seq(
            commaSep1(requiredType),
            optional(seq(",", commaSep1(defaultType))),
            optional(seq(",", commaSep1(defaultPack))),
          ),
          seq(
            commaSep1(requiredType),
            ",",
            commaSep1(requiredPack),
            optional(seq(",", commaSep1(defaultPack))),
          ),
          seq(commaSep1(defaultType), optional(seq(",", commaSep1(defaultPack)))),
          seq(commaSep1(requiredPack), optional(seq(",", commaSep1(defaultPack)))),
          commaSep1(defaultPack),
        ),
        ">",
      );
    },

    _required_generic_type_definition: ($) => field("name", $._identifier),

    _default_generic_type_definition: ($) =>
      seq(field("name", $._identifier), "=", field("default", $._type)),

    _required_generic_type_pack_definition: ($) => seq(field("name", $._identifier), "..."),

    _default_generic_type_pack_definition: ($) =>
      seq(field("name", $._identifier), "...", "=", field("default", $._type_pack)),

    generic_parameter_list: ($) =>
      seq(
        "<",
        choice(
          seq(commaSep1($.generic_type), optional(seq(",", commaSep1($.generic_type_pack)))),
          commaSep1($.generic_type_pack),
        ),
        ">",
      ),

    generic_type: ($) => field("name", $._identifier),

    generic_type_pack: ($) => seq(field("name", $._identifier), "..."),

    _type: ($) =>
      choice($._type_atom, $.union_type, $.intersection_type, $.optional_type, $.leading_type),

    _type_atom: ($) =>
      choice(
        $.type_reference,
        $.nil_type,
        $.boolean_type,
        $.string_type,
        $.typeof_type,
        $.table_type,
        $.function_type,
        $.attributed_function_type,
        $.parenthesized_type,
      ),

    type_reference: ($) =>
      prec.right(
        seq(
          optional(seq(field("module", $._identifier), ".")),
          field("name", $._identifier),
          optional(seq("<", optional(field("arguments", $.type_argument_list)), ">")),
        ),
      ),

    type_argument_list: ($) => commaSep1($._type_argument),

    _type_argument: ($) => choice($._type, $._type_pack),

    nil_type: () => "nil",

    boolean_type: () => choice("true", "false"),

    string_type: ($) => $._string_literal,

    parenthesized_type: ($) => seq("(", $._type, ")"),

    function_type: ($) =>
      seq(
        optional(field("generics", $.generic_parameter_list)),
        field("parameters", $.function_type_parameters),
        "->",
        field("return_type", $._return_type),
      ),

    function_type_parameters: ($) =>
      seq(
        "(",
        optional(
          choice(
            commaSep1($.function_type_parameter),
            seq(commaSep1($.function_type_parameter), ",", $._variadic_type_pack),
            $._variadic_type_pack,
          ),
        ),
        ")",
      ),

    function_type_parameter: ($) =>
      seq(optional(seq(field("name", $._identifier), ":")), field("type", $._type)),

    _return_type: ($) =>
      choice(alias($._packed_function_type, $.function_type), $._type, $._type_pack),

    type_pack: ($) => seq("(", optional($.type_list), ")"),

    type_list: ($) =>
      prec.right(
        choice(
          commaSep1($._type),
          seq(commaSep1($._type), ",", prec(1, $._variadic_type_pack)),
          prec(1, $._variadic_type_pack),
        ),
      ),

    _variadic_type_pack: ($) => choice($.variadic_type_pack, $.generic_type_pack),

    variadic_type_pack: ($) => seq("...", field("type", $._type)),

    table_type: ($) => seq("{", optional(choice($.array_type, $._table_type_members)), "}"),

    _table_type_members: ($) =>
      choice(
        seq($.property_type, optional(seq(choice(",", ";"), optional($._table_type_members)))),
        seq($.indexer_type, optional(seq(choice(",", ";"), optional($._table_properties)))),
      ),

    property_type: ($) =>
      prec.dynamic(
        1,
        seq(
          optional(field("access", $.access_qualifier)),
          field("name", choice($._identifier, seq("[", $._string_literal, "]"))),
          ":",
          field("type", $._type),
        ),
      ),

    indexer_type: ($) =>
      seq(
        optional(field("access", $.access_qualifier)),
        "[",
        field("key", $._type),
        "]",
        ":",
        field("value", $._type),
      ),

    access_qualifier: () => choice("read", "write"),

    union_type: ($) =>
      prec.left(
        PREC.TYPE_UNION,
        seq(
          field("left", choice($._union_operand, $.union_type)),
          "|",
          field("right", $._union_operand),
        ),
      ),

    intersection_type: ($) =>
      prec.left(
        PREC.TYPE_INTERSECTION,
        seq(
          field("left", choice($._type_atom, $.intersection_type)),
          "&",
          field("right", $._type_atom),
        ),
      ),

    optional_type: ($) => prec.left(PREC.TYPE_OPTIONAL, seq(field("type", $._union_operand), "?")),

    _union_operand: ($) => prec(PREC.TYPE_UNION, choice($._type_atom, $.optional_type)),

    leading_type: ($) =>
      prec.right(
        choice(
          seq(field("operator", "|"), field("type", choice($._union_operand, $.union_type))),
          seq(field("operator", "&"), field("type", choice($._type_atom, $.intersection_type))),
        ),
      ),

    declare_global: ($) =>
      seq("declare", field("name", $._identifier), ":", field("type", $._type)),

    declare_function: ($) =>
      seq(
        optional(field("attributes", $.attributes)),
        "declare",
        "function",
        field("name", $._identifier),
        optional(field("generics", $.generic_parameter_list)),
        field("parameters", $.declare_parameter_list),
        optional(seq(":", field("return_type", $._return_type))),
      ),

    declare_parameter_list: ($) =>
      seq(
        "(",
        optional(
          choice(
            commaSep1($.declare_parameter),
            seq(commaSep1($.declare_parameter), ",", $.declare_variadic_parameter),
            $.declare_variadic_parameter,
          ),
        ),
        ")",
      ),

    declare_variadic_parameter: ($) =>
      seq("...", ":", field("type", choice($._type, $.generic_type_pack))),

    identifier: () => /[A-Za-z_][A-Za-z0-9_]*/,

    _identifier: ($) =>
      choice($.identifier, ...CONTEXTUAL_KEYWORDS.map((keyword) => alias(keyword, $.identifier))),
