test/corpus/types.txt
==================
Type aliases
==================

export type Result<T = string, U... = ()> = {
  read value: T,
  write [string]: unknown,
  callback: <A, R...>(value: A, ...R) -> (A, R...),
} & (Tagged?)

---

(source_file
  (type_alias_declaration
    (identifier)
    (generic_definition_list
      (generic_type_definition
        (identifier)
        (type_reference
          (identifier)))
      (generic_type_pack_definition
        (identifier)
        (type_pack)))
    (intersection_type
      (table_type
        (property_type
          (access_qualifier)
          (identifier)
          (type_reference
            (identifier)))
        (indexer_type
          (access_qualifier)
          (type_reference
            (identifier))
          (type_reference
            (identifier)))
        (property_type
          (identifier)
          (function_type
            (generic_parameter_list
              (generic_type
                (identifier))
              (generic_type_pack
                (identifier)))
            (function_type_parameters
              (function_type_parameter
                (identifier)
                (type_reference
                  (identifier)))
              (variadic_type_pack
                (type_reference
                  (identifier))))
            (type_pack
              (type_list
                (type_reference
                  (identifier))
                (generic_type_pack
                  (identifier)))))))
      (parenthesized_type
        (optional_type
          (type_reference
            (identifier)))))))

==================
Type packs and singleton types
==================

type Values<T...> = () -> T...
type Names = "first" | "second" | true | nil
type Leading = | string | number

---

(source_file
  (type_alias_declaration
    (identifier)
    (generic_definition_list
      (generic_type_pack_definition
        (identifier)))
    (function_type
      (function_type_parameters)
      (generic_type_pack
        (identifier))))
  (type_alias_declaration
    (identifier)
    (union_type
      (union_type
        (union_type
          (string_type
            (quoted_string
              (string_content)))
          (string_type
            (quoted_string
              (string_content))))
        (boolean_type))
      (nil_type)))
  (type_alias_declaration
    (identifier)
    (leading_type
      (union_type
        (type_reference
          (identifier))
        (type_reference
          (identifier))))))

==================
Type function
==================

export type function selectType(value)
  if value == types.number then
    return types.string
  end
  return value
end

---

(source_file
  (type_function_declaration
    (identifier)
    (function_body
      (parameter_list
        (parameter
          (identifier)))
      (block
        (if_statement
          (binary_expression
            (identifier)
            (field_expression
              (identifier)
              (identifier)))
          (block
            (return_statement
              (expression_list
                (field_expression
                  (identifier)
                  (identifier))))))
        (return_statement
          (expression_list
            (identifier)))))))

===============================
Parenthesized variadic type pack
===============================

declare utf8: {
  codepoint: (string, number?, number?) -> (...number),
  codes: (string) -> ((string, number) -> (number, number), string, number),
}
type Mapper = (...number) -> string
declare function points(...: Vector3): ...Vector3

---

(source_file
  (declare_global
    (identifier)
    (table_type
      (property_type
        (identifier)
        (function_type
          (function_type_parameters
            (function_type_parameter
              (type_reference
                (identifier)))
            (function_type_parameter
              (optional_type
                (type_reference
                  (identifier))))
            (function_type_parameter
              (optional_type
                (type_reference
                  (identifier)))))
          (type_pack
            (type_list
              (variadic_type_pack
                (type_reference
                  (identifier)))))))
      (property_type
        (identifier)
        (function_type
          (function_type_parameters
            (function_type_parameter
              (type_reference
                (identifier))))
          (type_pack
            (type_list
              (function_type
                (function_type_parameters
                  (function_type_parameter
                    (type_reference
                      (identifier)))
                  (function_type_parameter
                    (type_reference
                      (identifier))))
                (type_pack
                  (type_list
                    (type_reference
                      (identifier))
                    (type_reference
                      (identifier)))))
              (type_reference
                (identifier))
              (type_reference
                (identifier))))))))
  (type_alias_declaration
    (identifier)
    (function_type
      (function_type_parameters
        (variadic_type_pack
          (type_reference
            (identifier))))
      (type_reference
        (identifier))))
  (declare_function
    (identifier)
    (declare_parameter_list
      (declare_variadic_parameter
        (type_reference
          (identifier))))
    (variadic_type_pack
      (type_reference
        (identifier)))))

==================
Generic type lists
==================

type Empty = Box<>
type Nested = Outer<Inner<>>
type Defaults<T, U = string, R... = ()> = T
type Packs<T, U...> = T

---

(source_file
  (type_alias_declaration
    (identifier)
    (type_reference
      (identifier)))
  (type_alias_declaration
    (identifier)
    (type_reference
      (identifier)
      (type_argument_list
        (type_reference
          (identifier)))))
  (type_alias_declaration
    (identifier)
    (generic_definition_list
      (generic_type_definition
        (identifier))
      (generic_type_definition
        (identifier)
        (type_reference
          (identifier)))
      (generic_type_pack_definition
        (identifier)
        (type_pack)))
    (type_reference
      (identifier)))
  (type_alias_declaration
    (identifier)
    (generic_definition_list
      (generic_type_definition
        (identifier))
      (generic_type_pack_definition
        (identifier)))
    (type_reference
      (identifier))))

==========================
Invalid generic pack ordering
:error
==========================

type Bad<T..., U> = T

---



==========================
Invalid generic defaults
:error
==========================

type Bad<T = string, U> = T

---



===============================
Defaulted generic pack required
:error
===============================

type Bad<T = string, U...> = T

---



===============================
Trailing generic definition comma
:error
===============================

type Bad<T,> = T

---



=============================
Trailing generic parameter comma
:error
=============================

type Bad<T...,> = T

---



===========================
Trailing generic type comma
:error
===========================

type Bad = <T,>(T) -> T

---



===========================
Trailing type argument comma
:error
===========================

type Bad = Box<T,>

---



===========================
Trailing function pack comma
:error
===========================

type Bad = (...T,) -> T

---



=============================
Trailing return pack comma
:error
=============================

type Bad = () -> (T,)

---



================================
Parenthesized type combinations
================================

type Optional = string??
type Grouped = (string | number) & (Tagged?)
type Leading = | (string & number)
type FunctionBinding = (string) -> number & boolean

---

(source_file
  (type_alias_declaration
    (identifier)
    (optional_type
      (optional_type
        (type_reference
          (identifier)))))
  (type_alias_declaration
    (identifier)
    (intersection_type
      (parenthesized_type
        (union_type
          (type_reference
            (identifier))
          (type_reference
            (identifier))))
      (parenthesized_type
        (optional_type
          (type_reference
            (identifier))))))
  (type_alias_declaration
    (identifier)
    (leading_type
      (parenthesized_type
        (intersection_type
          (type_reference
            (identifier))
          (type_reference
            (identifier))))))
  (type_alias_declaration
    (identifier)
    (function_type
      (function_type_parameters
        (function_type_parameter
          (type_reference
            (identifier))))
      (intersection_type
        (type_reference
          (identifier))
        (type_reference
          (identifier))))))

==============================
Invalid union/intersection mix
:error
==============================

type Bad = string | number & boolean

---



==============================
Invalid intersection/union mix
:error
==============================

type Bad = string & number | boolean

---



======================
Repeated leading union
:error
======================

type Bad = | | string

---



==============================
Repeated leading intersection
:error
==============================

type Bad = & & string

---



===========================
Leading union intersection mix
:error
===========================

type Bad = | string & number

---



==============================
Leading intersection optional mix
:error
==============================

type Bad = & string?

---



====================
Table type indexers
====================

type One = {before: string, [string]: number, after: boolean}

---

(source_file
  (type_alias_declaration
    (identifier)
    (table_type
      (property_type
        (identifier)
        (type_reference
          (identifier)))
      (indexer_type
        (type_reference
          (identifier))
        (type_reference
          (identifier)))
      (property_type
        (identifier)
        (type_reference
          (identifier))))))

===========================
Invalid duplicate indexers
:error
===========================

type Bad = {[string]: number, [number]: string}

---
